Added linter config, installed dev dependencies, added default file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "noUnusedLocals": true,
     "noErrorTruncation": true,
     "skipLibCheck": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "outDir": "dist"
   },
   "exclude": ["dist"],
   "include": ["src"]
