--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "template repository for userscripters' projects",
   "scripts": {
+    "lint": "eslint src --fix",
     "build": "tsc"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/userscripters/template/issues"
   },
-  "homepage": "https://github.com/userscripters/template#readme"
+  "homepage": "https://github.com/userscripters/template#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "typescript": "^4.2.4"
+  }
 }
