--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
     target-branch: "master"
     labels:
       - "chores"
+      - "dependencies"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -14,3 +15,5 @@ updates:
       timezone: "UTC"
     allow:
       - dependency-type: "direct"
+    commit-message:
+      prefix: "Chores"
