--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "checkJs": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "target": "ES6",
+    "target": "es2019",
     "module": "CommonJS",
     "moduleResolution": "node",
     "noUnusedParameters": true,
