Replace non-existent build with build-all

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Compile
-      run: npm run build
+      run: npm run build-all
     - name: Run tests
       run: npm run test
