--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "template",
   "version": "1.0.0",
   "description": "template repository for userscripters' projects",
+  "icon": "",
+  "main": "dist/index.js",
   "scripts": {
     "test": "mocha",
     "lint": "eslint src --fix --ext .js,.ts",
@@ -22,6 +24,7 @@
     "stackoverflow"
   ],
   "author": "",
+  "contributors": [],
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/userscripters/template/issues"
