Added mocha config file & tests are now run during prebuild

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha",
     "lint": "eslint src --fix --ext .js,.ts",
     "clean": "rm -rf dist",
-    "prebuild": "npm run lint && npm run clean",
+    "prebuild": "npm run test && npm run lint && npm run clean",
     "postbuild": "npm run headers-tm",
     "uglify-modern": "uglifyjs dist/modern/* --compress --mangle -o dist/modern/index.min.js",
     "uglify-legacy": "uglifyjs dist/legacy/* --compress --mangle -o dist/legacy/index.min.js",
@@ -40,7 +40,7 @@
     "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "@userscripters/generate-headers": "^1.0.6",
+    "@userscripters/generate-headers": "^1.4.0",
     "chai": "^4.3.4",
     "eslint": "^7.26.0",
     "mocha": "^8.4.0",
