--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   "homepage": "https://github.com/userscripters/template#readme",
   "devDependencies": {
     "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "@userscripters/generate-headers": "^1.4.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^7.26.0",
     "mocha": "^8.4.0",
     "ts-node": "^10.0.0",
