--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
   "devDependencies": {
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/greasemonkey": "^4.0.2",
     "@types/jquery": "^3.5.6",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
+    "@types/tampermonkey": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@userscripters/generate-headers": "^2.5.0",
