--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
         "skipLibCheck": true,
         "downlevelIteration": true,
         "outDir": "dist",
-        "types": ["@userscripters/stackexchange-global-types", "jquery"]
+        "types": [
+            "@userscripters/stackexchange-global-types",
+            "jquery",
+            "greasemonkey",
+            "tampermonkey"
+        ]
     },
     "exclude": ["dist"],
     "include": ["src"]
