--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^5.21.0",
     "@userscripters/generate-headers": "^2.12.0",
     "@userscripters/generate-readme": "^2.3.1",
+    "@userscripters/stackexchange-api-types": "^3.4.0",
     "@userscripters/stackexchange-global-types": "^2.4.1",
     "@userscripters/storage": "^0.1.2",
     "chai": "^4.3.6",
