added StackApps generation to the build flow

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-all": "bash ./scripts/build.sh",
     "headers-tm": "bash ./scripts/headers.sh",
     "readme": "bash ./scripts/readme.sh",
-    "postversion": "bash ./scripts/postversion.sh"
+    "postversion": "bash ./scripts/postversion.sh",
+    "stackapps": "bash ./scripts/stackapps.sh"
   },
   "repository": {
     "type": "git",
@@ -51,6 +52,7 @@
     "@typescript-eslint/parser": "^5.22.0",
     "@userscripters/generate-headers": "^2.12.1",
     "@userscripters/generate-readme": "^2.3.1",
+    "@userscripters/generate-stackapps": "^1.2.0",
     "@userscripters/stackexchange-api-types": "^3.4.0",
     "@userscripters/stackexchange-global-types": "^2.4.1",
     "@userscripters/storage": "^0.1.2",
