added @userscripters/global-types to default installed packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "downlevelIteration": true,
         "outDir": "dist",
         "types": [
+            "@userscripters/global-types",
             "@userscripters/storage",
             "@userscripters/stackexchange-global-types",
             "@userscripters/stackexchange-api-types",
