--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@userscripters/generate-headers": "^3.2.1",
     "@userscripters/generate-readme": "^2.3.1",
     "@userscripters/generate-stackapps": "^1.2.0",
+    "@userscripters/global-types": "^0.2.10",
     "@userscripters/stackexchange-api-types": "^3.4.0",
     "@userscripters/stackexchange-global-types": "^2.4.2",
     "@userscripters/storage": "^0.1.2",
