--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,6 +12,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 14
+                  cache: 'npm'
             - name: Update npm version to latest
               run: npm install -g npm@latest # stop showing warnings about the lockfile
             - name: Install dependencies
