--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
     prepare:
-        uses: userscripters/shared-actions/.github/workflows/workflow-nodejs.yml@main
+        uses: userscripters/shared-actions/.github/workflows/workflow-nodejs.yml@master
     build:
         runs-on: ubuntu-latest
         steps:
