--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,71 +5,4 @@ on:
         types: [released]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        steps:
-            - uses: actions/checkout@v3
-            - name: Using Node 14
-              uses: actions/setup-node@v3
-              with:
-                  node-version: 14
-            - name: Update npm version to latest
-              run: npm install -g npm@latest
-            - name: Install dependencies
-              run: |
-                  npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
-                  npm install --production=false
-              env:
-                  NODE_AUTH_TOKEN: ${{github.token}}
-                  NODE_ENV: production
-            - name: Compile
-              run: npm run build
-            - name: Run tests
-              run: npm run test
-
-    publish-gh:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 12
-                  registry-url: https://npm.pkg.github.com
-                  scope: "@${{github.repository_owner}}"
-            - run: |
-                  npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
-                  npm install --production=false
-              env:
-                  NODE_AUTH_TOKEN: ${{github.token}}
-                  NODE_ENV: production
-            - run: npm publish
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.PAT}}
-
-    publish-npm:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 14
-                  registry-url: "https://registry.npmjs.org"
-                  scope: "@${{github.repository_owner}}"
-            - run: |
-                  npm config set //npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN
-                  npm install --production=false
-              env:
-                  NODE_AUTH_TOKEN: ${{github.token}}
-                  NODE_ENV: production
-            - run: |
-                  npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
-                  declare repo_name=$(echo "${{github.repository}}" | cut -d '/' -f 2)
-                  declare temp_npmrc="/home/runner/work/$repo_name/$repo_name/.npmrc"
-                  truncate $temp_npmrc -s 0
-                  echo "@${{github.repository_owner}}:registry=https://registry.npmjs.org" >> $temp_npmrc
-                  npm publish --access public
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    uses: userscripters/shared-actions/.github/workflows/workflow-npm_publish.yml@master
