--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,4 +5,5 @@ on:
         types: [released]
 
 jobs:
-    uses: userscripters/shared-actions/.github/workflows/workflow-npm_publish.yml@master
+    build:
+        uses: userscripters/shared-actions/.github/workflows/workflow-npm_publish.yml@master
