--- a/.mocharc.json
+++ b/.mocharc.json
@@ -7,5 +7,9 @@
     ],
     "spec": [
         "test/**/*.spec.*"
+    ],
+    "node-option": [
+        "experimental-specifier-resolution=node",
+        "loader=ts-node/esm"
     ]
 }
