chore: bump eslint to v9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "jquery",
             "greasemonkey",
             "tampermonkey",
-            "mocha"
+            "mocha",
+            "node"
         ]
     },
     "exclude": ["dist"],
